--- a/Models/Forms/Admin/AdminForm.resx
+++ b/Models/Forms/Admin/AdminForm.resx
@@ -117,4 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="guna2ResizeForm1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAARdJREFUSEvl
+        lesRgjAQhCmBUiyBEiiBTrQD7UA70A6kA+1AO9AO4i5ZFLmAEvCH+s3sjJd7LI8EkybOuRRaQxcoBvax
+        P9VIC5IlKydgq5EWFZyh7ivpgX3qd1qyMAlKhVGwn0MUWpgEf2iC2hxaKqxAXHCIQguTYIjJwre4PXTf
+        LPhd6KelKo8zIQfo9a70tdYEa3wE84B4B014GGdqC+Prnk0QZ375bWiUq93ia0ab1ITfi5JTmZBMYx4o
+        8RV3coWGvROCNe4ubte22l9tGgzfXX2glkY1Ryj+nHSB2tqEd/SxE89v10phBeJpv10h2M8hCi1Mgt8x
+        OUFj/uPZ32vS3vex7DTSgiSvZAPxUMXAPvY3nkSS3ABR5fAf+OQwMQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="guna2Button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAVBJREFUSEvt
+        lGFRAzEUhE9CJVRCJVRCJdQBdQAScEAl4AAcgAOQgIPj27Avk9yF9GjhBwM7s5Nk30s2L8nd8DcxjuMO
+        Xnl4PlhkA/ceZqAd4CO8hUfL54EFtvAGbixJO5YL09/DZ7iy9DUwMUy06xV8gq3KVLGM8mYWg0mlSXcR
+        Ymvn7SwtAxNk8uDJa8ux83szV0Zf1Uq7tnQaJOtiNak6b8bp+KKfxAJo6UFEThMKwjslW6qAno1pZyYC
+        uh5E3kwFiVAXfLA0A7E4ru4dOO9NraUsvppbyxeBdQRt5uPu6OiiVYnE7zTRmnXFCJ+aSId6cSV7Rzu6
+        WwO9Z6Lvpoop390ZiP0CE9ruMxaIdU30jKdnL77AMEmGUM+0lSv2K4HpV1K2sKxE43iNals8aTJtZdC8
+        k2m8aC+rJMBY+dMKosraxAGd70+g2tg/FmAY3gFvh9QfuMVbUAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="guna2Button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAFVJREFUSEvt
+        lEEKACAIBP1Z/bx+ZivYrUNBKx4cmLO4K0rxhKp22JjaEDphQywuqt5MkQkUM+FgGnbCtglVD63IBIqx
+        /3J80b8MO2E6Oy6q3kxxg8gCI/bwsJrl1PUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="guna2Button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAZJJREFUSEvt
+        lEFKw0AUht8RPEJOkM4FEuYI3bn1KF260xvUO7gTbEQR3CULKZQu7MJNo9AsmoqKGd8/eUPSNqVRsijo
+        Dz/Dm8z7/kxmCB2cvqY0KKZkMMpU9yrGZJxl6mdaKH2UKq2kXNNbRDqPaLi6pYXzMqIzzMuSNYEDnpSV
+        Uj88Z19IacUQbzmiKB+R2WU8NxGtAcEBT8pSnOqlvTCzu+EFqPlNFQMWTeBNYx3Wl5xgaDklz5OIMnnu
+        h4NXpfvzXjDDm3FzvAnb4xh96AcHOwFXIjhEUlM/uElVcJJf06ABst/ch37eTVTuKszKAD4kpNst+oG9
+        Ndww2wK085PjYATXXiabzDt4UVpjxLdtaG5t9Nd5+HSEs4BdmL2uDc1tjX4Hx7mAbT+Xu9cYOwmp8WB7
+        LnV1ESKo3foPcT6ckPeEjlcPlPzW6BfUtsyE+sWEYrbpwDF4gq5UPFLCNh06EXQlE5PH1rucXtHp8yXF
+        zqib1tVc/ebb6uOe1OcdZWyDEbU86lZ8czwO0Bhl6k+J6BvnIIrM/35AQwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="guna2Button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAadJREFUSEvN
+        lYFxwjAMRRmBURiBDdoNygYwQjeAEdgANigbwAZlg7IBfS8oBMeOgfau13enI/qSnChyzOhfcD6fp9gS
+        +8C+MPFXX30Sqc9DsYvvsQO2CH8csXH46sa94bQpfBQKVtgRew2pinmRvwypDonbsOaphesJtsHa12WH
+        8wg34NuddZuQypBgB9twG/C9Qbt4n08smQm+N1qFm0LAd2zL1w4kimrsI7UB345cJ58RogPMZoB2l0i9
+        guSMduFeQLCLQ7gJ6I+QbWM0H7rTcZzFItwE9LtEagKy27ubDc4OK+5zdJ+oxjFSE9B9O90rwzlhycBb
+        0O8SqQnIboBTuJeF4jLDROMVuoV6GIzL60JDncxMrjCL1AT0rJPBmQgx932J4jyEWDaTwd0lxPzqSwye
+        wMTesWR3edfky+1DPCNCRQin34kg+MqKp67JWIliJ+j5Fy+I2dkVyZ6+NYy/RIk1DtyDszxjAs7Gojds
+        6OQdwvw5Zn35FG4hYY39hnUsVYdEO/oJ9Q76UNDO6BHcSc/9x99CsTvLztx9t+irD34rf8ho9A3nBT7n
+        XiunJQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="guna2NotificationPaint1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>198, 17</value>
+  </metadata>
+  <metadata name="guna2NotificationPaint2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>414, 17</value>
+  </metadata>
 </root>
